envoy.multiple-services.yaml

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 127.0.0.1, port_value: 12345 }
      filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              codec_type: auto
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                  - name: local_service
                    domains: ["*"]
                    routes:

                      # other services
                      # ###############################################################
                      - match: 
                          safe_regex:
                            google_re2: {}
                            regex: "^/[^proto-package-name1|proto-package-name2](.+)/.+$"
                        route:
                          cluster: other_service
                          timeout: 0s
                          max_stream_duration:
                            grpc_timeout_header_max: 0s
                      # ###############################################################


                      # service 1 
                      # ############################################################### 
                      - match: { prefix: "/proto-package-name1" }
                        route:
                          cluster: service_1
                          timeout: 0s
                          max_stream_duration:
                            grpc_timeout_header_max: 0s
                      # ###############################################################


                      # service 2
                      # ############################################################### 
                      - match: { prefix: "/proto-package-name2" }
                        route:
                          cluster: service_2
                          timeout: 0s
                          max_stream_duration:
                            grpc_timeout_header_max: 0s
                      # ###############################################################

                      

                    cors:
                      allow_origin_string_match:
                        - prefix: "*"
                      allow_methods: GET, PUT, DELETE, POST, OPTIONS
                      allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout,xmhis-session-id
                      max_age: "1728000"
                      expose_headers: custom-header-1,grpc-status,grpc-message
              http_filters:
                - name: envoy.filters.http.grpc_web
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                - name: envoy.filters.http.cors
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:

    # other services
    # ###############################################################
    - name: other_service
      connect_timeout: 0.25s
      type: logical_dns
      http2_protocol_options: {}
      lb_policy: round_robin
      # win/mac hosts: Use address: host.docker.internal instead of address: localhost in the line below
      load_assignment:
        cluster_name: cluster_0
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 127.0.0.1
                    port_value: 9090
    # ###############################################################
                    

    # service 1 
    # ###############################################################
    - name: service_1
      connect_timeout: 0.25s
      type: logical_dns
      http2_protocol_options: {}
      lb_policy: round_robin
      load_assignment:
        cluster_name: cluster_1
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 127.0.0.1
                    port_value: 9091
    # ###############################################################


    # service 2
    # ###############################################################
    - name: service_2
      connect_timeout: 0.25s
      type: logical_dns
      http2_protocol_options: {}
      lb_policy: round_robin
      load_assignment:
        cluster_name: cluster_2
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 127.0.0.1
                    port_value: 9092
    # ###############################################################
